test/sematest/valid/unary_expressions.java
class A {
    public static void main(String[] args){
        boolean a = !!!!!!!!!!!!!!!!!!(4 == 4);
        int b = -(-(-4));
        a = a == (b == -4);
    }
}