test/sematest/invalid/comparisons2.java
class A {
  public static void main(String[] args) {
    boolean a = true == 4;
  }
}